# FCT4-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md  a.out  test.fct
fct_gui/: Cargo.toml
libfct4_rust/: Cargo.toml
libfct4_rust/src/: error.rs  fct_archive.rs  file_parser.rs  fs_operations.rs  lib.rs
src/: main.rs
src/fct/: fct_archive.rs  file_parser.rs  fs_operations.rs  mod.rs
