[package]
name = "libfct4"
version = "0.1.1"
edition = "2021"
authors = ["Janick Eicher"]
documentation = "https://docs.rs/libfct4"
repository = "https://github.com/J4n1X/FCT4-Rust"
description= "Implementation of FCT Version 4 (Devised by Janick Eicher) in Rust"
license = "MIT"
keywords= ["archive", "files"]
cathegories = ["data-structures", "encoding", "filesystem"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
pathdiff = "0.1.0"
bufreaderwriter = "0.1.2"